--- a/MyProjectPractice/Controllers/Base.lproj/Main.storyboard
+++ b/MyProjectPractice/Controllers/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tl4-rG-F7l">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tl4-rG-F7l">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -134,39 +134,62 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rEh-5X-IL6">
-                                <rect key="frame" x="20" y="276" width="374" height="516"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gqY-mR-wxn">
+                                <rect key="frame" x="20" y="796" width="374" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="websiteButtonPressed:" destination="uzr-Dd-ewd" eventType="touchUpInside" id="aDC-RM-MxV"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.84999999999999998" contentMode="scaleToFill" editable="NO" text="blah blah" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="0n6-Wp-iLr">
+                                <rect key="frame" x="20" y="216" width="374" height="500"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
+                                <fontDescription key="fontDescription" name="Georgia-BoldItalic" family="Georgia" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get your daily horoscope here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TLJ-Va-VQ6">
+                                <rect key="frame" x="20" y="756" width="374" height="20"/>
+                                <fontDescription key="fontDescription" name="Georgia-BoldItalic" family="Georgia" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.50967821150000003" blue="0.48260132560000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" red="1" green="0.50967821150000003" blue="0.48260132560000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="7ha-Sc-z8a" firstAttribute="leading" secondItem="sXm-1i-CUC" secondAttribute="leading" constant="90" id="12b-zn-TwI"/>
+                            <constraint firstItem="gqY-mR-wxn" firstAttribute="top" secondItem="TLJ-Va-VQ6" secondAttribute="bottom" constant="20" id="1UF-gl-PnR"/>
+                            <constraint firstItem="sXm-1i-CUC" firstAttribute="trailing" secondItem="gqY-mR-wxn" secondAttribute="trailing" constant="20" id="1it-SD-Ssd"/>
+                            <constraint firstItem="TLJ-Va-VQ6" firstAttribute="leading" secondItem="sXm-1i-CUC" secondAttribute="leading" constant="20" id="21h-ps-JKP"/>
                             <constraint firstItem="sXm-1i-CUC" firstAttribute="trailing" secondItem="7ha-Sc-z8a" secondAttribute="trailing" constant="90" id="2PF-9c-2e3"/>
-                            <constraint firstItem="rEh-5X-IL6" firstAttribute="top" secondItem="xAG-wH-yIR" secondAttribute="bottom" constant="80" id="7G9-UN-Oin"/>
                             <constraint firstItem="7ha-Sc-z8a" firstAttribute="top" secondItem="sXm-1i-CUC" secondAttribute="top" constant="2" id="DYQ-Y6-qcI"/>
                             <constraint firstItem="sXm-1i-CUC" firstAttribute="trailing" secondItem="xAG-wH-yIR" secondAttribute="trailing" constant="20" id="G7c-yi-1Jf"/>
+                            <constraint firstItem="TLJ-Va-VQ6" firstAttribute="top" secondItem="0n6-Wp-iLr" secondAttribute="bottom" constant="40" id="I5q-WV-rEj"/>
+                            <constraint firstItem="TLJ-Va-VQ6" firstAttribute="top" secondItem="0n6-Wp-iLr" secondAttribute="bottom" constant="40" id="N4U-wC-Ldu"/>
                             <constraint firstItem="Y6Z-uH-PMc" firstAttribute="top" secondItem="sXm-1i-CUC" secondAttribute="top" constant="29" id="Qce-CY-EC6"/>
+                            <constraint firstItem="sXm-1i-CUC" firstAttribute="trailing" secondItem="0n6-Wp-iLr" secondAttribute="trailing" constant="20" id="Xfq-GN-hHx"/>
+                            <constraint firstItem="sXm-1i-CUC" firstAttribute="trailing" secondItem="TLJ-Va-VQ6" secondAttribute="trailing" constant="20" id="YEL-bj-qPg"/>
                             <constraint firstItem="Y6Z-uH-PMc" firstAttribute="leading" secondItem="sXm-1i-CUC" secondAttribute="leading" id="YX4-m9-ZII"/>
-                            <constraint firstItem="sXm-1i-CUC" firstAttribute="trailing" secondItem="rEh-5X-IL6" secondAttribute="trailing" constant="20" id="bze-sR-9dw"/>
+                            <constraint firstItem="gqY-mR-wxn" firstAttribute="leading" secondItem="sXm-1i-CUC" secondAttribute="leading" constant="20" id="fjO-mb-cFm"/>
+                            <constraint firstItem="sXm-1i-CUC" firstAttribute="bottom" secondItem="gqY-mR-wxn" secondAttribute="bottom" constant="30" id="fjV-LZ-cwI"/>
                             <constraint firstItem="xAG-wH-yIR" firstAttribute="leading" secondItem="sXm-1i-CUC" secondAttribute="leading" constant="20" id="hDi-FV-EeF"/>
                             <constraint firstItem="xAG-wH-yIR" firstAttribute="top" secondItem="7ha-Sc-z8a" secondAttribute="bottom" constant="30" id="k2h-gJ-Hcu"/>
                             <constraint firstAttribute="bottom" secondItem="Y6Z-uH-PMc" secondAttribute="bottom" id="kky-Kb-b3O"/>
                             <constraint firstItem="Y6Z-uH-PMc" firstAttribute="trailing" secondItem="sXm-1i-CUC" secondAttribute="trailing" id="nDV-b4-ACB"/>
-                            <constraint firstItem="rEh-5X-IL6" firstAttribute="leading" secondItem="sXm-1i-CUC" secondAttribute="leading" constant="20" id="pms-cG-vUh"/>
-                            <constraint firstItem="sXm-1i-CUC" firstAttribute="bottom" secondItem="rEh-5X-IL6" secondAttribute="bottom" constant="70" id="r6U-Y9-wkn"/>
+                            <constraint firstItem="0n6-Wp-iLr" firstAttribute="top" secondItem="xAG-wH-yIR" secondAttribute="bottom" constant="20" id="vRS-gg-54Y"/>
+                            <constraint firstItem="0n6-Wp-iLr" firstAttribute="leading" secondItem="sXm-1i-CUC" secondAttribute="leading" constant="20" id="xVe-Tg-fec"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="sXm-1i-CUC"/>
                     </view>
                     <navigationItem key="navigationItem" id="aiS-3o-GCQ"/>
                     <connections>
+                        <outlet property="websiteOutlet" destination="gqY-mR-wxn" id="7ci-SW-KyY"/>
                         <outlet property="zodiacDateLabel" destination="xAG-wH-yIR" id="nRK-TN-7DP"/>
-                        <outlet property="zodiacHoroscopeLabel" destination="rEh-5X-IL6" id="j8i-nE-gPU"/>
+                        <outlet property="zodiacHoroscopeLabel" destination="0n6-Wp-iLr" id="shc-av-FVH"/>
                         <outlet property="zodiacImageOutlet" destination="Y6Z-uH-PMc" id="G1R-4p-RlD"/>
                         <outlet property="zodiacNameLabel" destination="7ha-Sc-z8a" id="YWG-da-ScZ"/>
                     </connections>
